fix nav link alignment

--- a/Final Project/Site/css/main.css
+++ b/Final Project/Site/css/main.css
@@ -244,7 +244,7 @@ nav a {
   text-decoration: none;
   font-size: 20px;
   color: #6981ee;
-  padding: 37px 20px 26px 20px;
+  padding: 38px 20px 25px 20px;
   transition: all 300ms ease;
 }
 
@@ -259,7 +259,7 @@ nav .nav-active{
 
 nav .nav-active a{
   color: #fff;
-  padding: 32px 20px 26px 20px;
+  padding: 33px 20px 24px 20px;
 }
 
 nav .nav-active a:hover {
@@ -880,7 +880,7 @@ nav .nav-active a:hover {
         border: solid 1px #6981ee;
         background-color: #293d98;
         color: #6981ee;
-        padding: 10px;
+        padding: 12px 0 8px 0;
     }
 
     nav .nav-active{
